[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bifurcated_sort"
version = "0.2.1"
description = "A hybrid bifurcated sorting algorithm using ascending and descending linked lists with BST-accelerated insertion"
authors = [
  { name = "Balaji", email = "balajisuresh1359@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["sorting", "algorithm", "bifurcated", "linked-list", "BST", "hybrid-sort"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://balajisuresh1359.github.io/balaji-area/code/bifurcated_insertion_sort.html"
Documentation = "https://github.com/balajisuresh1359/bifurcated_sort/wiki"
Repository = "https://github.com/balajisuresh1359/bifurcated_sort"
Issues = "https://github.com/balajisuresh1359/bifurcated_sort/issues"

[tool.setuptools]
packages = ["bifurcated_sort"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]